working on nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ upstream personal-server {
 server {
 
     listen 80;
-
+    server_name me.homeroochoa.com
     location / {
         proxy_pass http://personal-server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
