--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,4 @@
-FROM jwilder/nginx-proxy:1.0
-COPY vhost.d/default /etc/nginx/vhost.d/default
-COPY custom.conf /etc/nginx/conf.d/custom.conf
+FROM nginx:1.19.0-alpine
+
+RUN rm /etc/nginx/conf.d/default.conf
+COPY default.conf /etc/nginx/conf.d/default.conf
