--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,8 +20,8 @@ services:
     volumes:
       - static_volume:/home/app/server/static
       - certs:/etc/nginx/certs
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - html:/usr/share/nginx/html
-      - vhost:/etc/nginx/vhost.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
     depends_on:
       - web
