--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-upstream web {
+upstream personal-server {
     server web:8000;
 }
 
@@ -7,7 +7,7 @@ server {
     listen 80;
     server_name me.homeroochoa.com;
     location / {
-        proxy_pass http://web;
+        proxy_pass http://personal-server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
