--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,12 @@
-upstream personal-server {
+upstream web {
     server web:8000;
 }
-
 server {
 
     listen 80;
-    server_name me.homeroochoa.com;
+
     location / {
-        proxy_pass http://personal-server;
+        proxy_pass http://web;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
