--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-
+    server_name me.homeroochoa.com
     location / {
         proxy_pass http://web:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
